--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -334,6 +334,28 @@
   <div class='mt-4 text-center'>
     <button type='button' data-action='patch-account' class='btn btn-primary'>{{ 'Save'|trans }}</button>
   </div>
+
+  <h2 class='p-2 pl-3 section-title mt-4'>{{ 'Signature keys'|trans }}</h2>
+  <div class='pl-3 mt-2 mb-5' id='ucp-sigkeys'>
+    <p>{{ 'Signature keys allow you to cryptographically sign some data. Have a look at the %scomplete documentation%s.'|trans|format("<a target='_blank' rel='noopener' href='https://doc.elabftw.net/user-guide.html#signatures'>", "</a>")|raw }}</p>
+    {% if not App.Users.userData.sig_privkey %}
+      <p>{{ 'You do not have a key pair associated with your account yet. In order to generate one, enter a passphrase below and click the button.'|trans }}<p>
+    <div class='input-group'>
+      <input type='password' class='form-control' autocomplete='new-password' id='sigPassphraseInput' minlength='{{ App.Config.configArr.min_password_length }}' />
+      <div class='input-group-append'>
+        <button type='button' data-action='create-sigkeys' class='btn btn-primary'>{{ 'Generate signature keys'|trans }}</button>
+      </div>
+    </div>
+      <span class='smallgray'>{{ 'Tip: use a password manager or a passphrase that you can remember, see %sthis XKCD comic%s.'|trans|format("<a target='_blank' rel='noopener' href='https://xkcd.com/936/'>", "</a>")|raw }}</span>
+    {% else %}
+      <p>{{ 'Your signature encrypted private key (keep it secret):'|trans }}<p>
+      <button type='button' data-action='download-sig_privkey' class='btn btn-secondary'>{{ 'Download private key'|trans }}</button>
+      <p>{{ 'Your signature public key (share it with the world):'|trans }}<p>
+      <textarea class='form-control' readonly>{{ App.Users.userData.sig_pubkey }}</textarea>
+      <button type='button' data-action='download-sig_pubkey' class='btn btn-secondary mt-1'>{{ 'Download public key'|trans }}</button>
+    {% endif %}
+
+  </div>
 </div>
 
 {# TAB 3 - USER TEMPLATES #}
