add external-link class for external links to get a little icon
add download priv/pubkey buttons in menu
remove @types/file-saver dependency from package.json
create saveStringAsFile to save files

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -153,6 +153,16 @@ a:hover,
     text-decoration: none;
 }
 
+/* add arrow going out of square icon after external links */
+.external-link::after {
+    content: '\f08e'; // arrow-up-right-from-square
+    font-family: 'Font Awesome 6 Free';
+    font-size: 0.6em;
+    font-weight: 700;
+    padding-left: 3px;
+    vertical-align: text-top;
+}
+
 .underlined {
     text-decoration: underline !important;
 }
