--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -154,7 +154,7 @@
 
 {# TAB 2 TEAM GROUPS #}
 <div data-tabcontent='2' hidden>
-  <p><a target='_blank' rel='noopener' href='https://doc.elabftw.net/admin-guide.html#groups-tab'>{{ 'Link to documentation'|trans }} <i class='fas fa-fw fa-arrow-up-right-from-square'></i></a></p>
+  <p><a target='_blank' rel='noopener' class='external-link' href='https://doc.elabftw.net/admin-guide.html#groups-tab'>{{ 'Link to documentation'|trans }}</a></p>
   <h3 class='p-2 pl-3 section-title'>{{ 'Create a group'|trans }}</h3>
 
   <div class='pl-3 mt-2 mb-5'>
