use max-height:100% in body_view. fix issue #5003

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -376,7 +376,7 @@ button:disabled {
 
 #body_view {
     img {
-        height: auto;
+        max-height: 100%;
         max-width: 100%;
     }
 
