bring back the reset 2fa button
turns out the dropdown entry was never shown because the if was looking
for mfa_secret instead of has_mfa_enabled

--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -224,7 +224,7 @@
                         {% endif %}
                       {% endif %}
                       {# DISABLE 2FA: only for sysadmin if user has 2fa enabled #}
-                      {% if user.mfa_secret and App.Users.userData.is_sysadmin %}
+                      {% if user.has_mfa_enabled and App.Users.userData.is_sysadmin %}
                         <button type='button' class='btn btn-dropdown-item dropdown-item' data-action='remove-user-2fa' data-userid='{{ user.userid }}'>
                           <i class='fas fa-fw fa-user-shield mr-1'></i>{{ 'Disable 2FA'|trans }}
                         </button>
