add request actions

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1198,6 +1198,7 @@ input[type='color'] {
 
 .user-badge {
     background-color: $lightblue;
+    border: 1px solid $firstlevel;
 }
 
 .admin-badge {
