--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -15,6 +15,7 @@
 
   {% if not searchPage %}
     {% include 'show-view-edit.html' %}
+    {% include 'request-actions-show.html' %}
   {% endif %}
 
   <hr>
