use Noto font in PDFs

--- a/src/templates/pdf.html
+++ b/src/templates/pdf.html
@@ -2,9 +2,9 @@
 <html lang='en'>
   <head>
     <style>{{ css|raw }}</style>
-    {{ useCjk ? '<style>td { font-family:sun-extA; }</style>' }}
+    {{ useCjk ? '<style>td { font-family:Noto; }</style>' }}
   </head>
-  <body {{ useCjk ? " style='font-family:sun-extA;'" }}>
+  <body {{ useCjk ? " style='font-family:Noto;'" }}>
   <htmlpagefooter name='footer'>
     {% if pdfSig %}
       <div class='footer-block signatures'>
