--- a/src/templates/qr-pdf.html
+++ b/src/templates/qr-pdf.html
@@ -3,9 +3,9 @@
   <head>
     <title>QR Codes PDF</title>
     <style>{{ css|raw }}</style>
-    {{ useCjk ? '<style>td { font-family:sun-extA; }</style>' }}
+    {{ useCjk ? '<style>td { font-family:Noto; }</style>' }}
   </head>
-  <body {{ useCjk ? " style='font-family:sun-extA;'" }}>
+  <body {{ useCjk ? " style='font-family:Noto;'" }}>
     <htmlpageheader name='header'>
       <div id='header'>
         <p style='float:right; width:10%;'><br><br>
