--- a/src/templates/view-edit-toolbar.html
+++ b/src/templates/view-edit-toolbar.html
@@ -119,7 +119,7 @@
         {% if App.Users.userData.sig_privkey %}
           <button type='button' data-action='sign-entity' data-dismiss='modal' {{ not App.Users.userData.sig_privkey ? 'disabled' }} class='btn btn-primary'>{{ 'Add your signature'|trans }}</button>
         {% else %}
-          <a href='/ucp.php?tab=2#ucp-sigkeys'><button type='button' class='btn btn-primary'>{{ 'Go to User Control Panel'|trans }}</button></a>
+          <a class='btn btn-primary' href='/ucp.php?tab=2#ucp-sigkeys'>{{ 'Go to User Control Panel'|trans }}</a>
         {% endif %}
       </div>
     </div>
