rework a few things * resen(d|t) to sen(d|t) * rename config variable * remove Usergroup::isAdmin * more apidoc

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -36,7 +36,7 @@
 {% include 'create-statuslike-modal.html' with {'target': 'experiments_categories', 'title': 'Create new experiments category'|trans} %}
 {% include 'create-statuslike-modal.html' with {'target': 'experiments_status', 'title': 'Create new experiments status'|trans} %}
 {% include 'create-statuslike-modal.html' with {'target': 'items_status', 'title': 'Create new resources status'|trans} %}
-{% include 'resend-onboarding-email-modal.html' %}
+{% include 'onboarding-email-modal.html' %}
 
 {# set variables for binary-settings template and other inputs with a data-model #}
 {% set src = App.teamArr %}
