use tom select to select users in onboarding email modal

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -45,6 +45,7 @@ $text-muted: $medium;
 @import 'jsoneditor';
 @import 'ove';
 @import 'search-syntax-highlighting';
+@import 'tom-select';
 
 /* Font is Lato */
 @font-face {
