--- a/src/templates/onboarding-email-modal.html
+++ b/src/templates/onboarding-email-modal.html
@@ -8,13 +8,12 @@
         </button>
       </div>
       <div class='modal-body'>
-        <label for='sendOnboardingEmailToUsers'>{{ 'Select users to whom the onboarding email will be send again.'|trans }}</label>
-        <select id='sendOnboardingEmailToUsers' class='form-control' multiple>
+        <label for='sendOnboardingEmailToUsers'>{{ 'Select users to whom the onboarding email will be sent.'|trans }}</label>
+        <select id='sendOnboardingEmailToUsers' multiple placeholder='{{ 'Search users...'|trans }}' autocomplete='off'>
           {% for user in allTeamUsersArr|filter(user => user.archived == 0) %}
             <option value='{{ user.userid }}'>{{ user.fullname }} ({{ user.email }})</option>
           {% endfor %}
         </select>
-        <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
       </div>
       <div class='modal-footer'>
         <button type='button' class='btn btn-secondary' data-dismiss='modal'>{{ 'Cancel'|trans }}</button>
