remove cjk pdf user option as substitutions are enabled

--- a/src/templates/pdf.html
+++ b/src/templates/pdf.html
@@ -2,9 +2,8 @@
 <html lang='en'>
   <head>
     <style>{{ css|raw }}</style>
-    {{ useCjk ? '<style>td { font-family:Noto; }</style>' }}
   </head>
-  <body {{ useCjk ? " style='font-family:Noto;'" }}>
+  <body>
   <htmlpagefooter name='footer'>
     {% if pdfSig %}
       <div class='footer-block signatures'>
