remove the icon

--- a/src/templates/onboarding-email.html
+++ b/src/templates/onboarding-email.html
@@ -1,4 +1,4 @@
-<h3 class='p-2 pl-3 section-title'><i class='fas fa-envelope'></i> {{ 'Onboarding email'|trans }}</h3>
+<h3 class='p-2 pl-3 section-title'>{{ 'Onboarding email'|trans }}</h3>
 <div class='pl-3 mt-2 form-group'>
   {# USERS #}
   <p>{{ 'This email will be sent to new users.'|trans }}</p>
