--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -33,11 +33,17 @@
         </button>
       </div>
       <div class='modal-body' data-wait='{{ 'Please wait…'|trans }}'>
-        <p>{{ 'Warning: regenerating your signature keys mean you will overwrite your current key pair.'|trans }}</p>
+        <p>{{ 'Warning: regenerating your signature keys means the current key will be archived and will not be available anymore.'|trans }}</p>
+        <label for='regen_sigPassphraseInput'>{{ 'Enter a passphrase:'|trans }}</label>
+        <div class='input-group'>
+          <input type='password' class='form-control' autocomplete='new-password' id='regen_sigPassphraseInput' minlength='{{ App.Config.configArr.min_password_length }}' />
+          <div class='input-group-append'>
+            <button type='button' data-action='regenerate-sigkeys' data-dismiss='modal' class='btn btn-primary'>{{ 'Regenerate'|trans }}</button>
+          </div>
+        </div>
       </div>
       <div class='modal-footer'>
         <button type='button' class='btn btn-secondary' data-dismiss='modal'>{{ 'Cancel'|trans }}</button>
-        <button type='button' data-action='regenerateSigkeys' data-dismiss='modal' class='btn btn-primary'>{{ 'Regenerate'|trans }}</button>
       </div>
     </div>
   </div>
