--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -389,7 +389,7 @@ button:disabled {
 }
 
 /* fix for big images uploaded in the text */
-.item .txt {
+.entity .txt {
     overflow: auto;
 }
 
@@ -570,8 +570,8 @@ tr:nth-child(odd) {
     }
 }
 
-/* ITEMS */
-.item {
+/* ENTITIES */
+.entity {
     background-color: $white;
     border: 1px solid $firstlevel;
     border-left: 6px solid var(--left-color);
@@ -1053,7 +1053,7 @@ the form-control fails to do that so we do the border ourselves */
         text-decoration: none !important;
     }
 
-    .item {
+    .entity {
         background-color: #fff;
         font-size: 14px;
         line-height: normal;
