--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -154,20 +154,25 @@
 <div class='row mb-2'>
   {# AUTHOR/OWNER HELPER #}
   <div class='col-md-5'>
-    <label for='searchonly'>{{ 'And author is'|trans }}/{{ 'belongs to group:'|trans }}</label>
     {% if App.Config.configArr.debug -%}
-      <!-- [html-validate-disable-block element-permitted-content: suppress error from select picker: div child of button] -->
+      <!-- [html-validate-disable-block input-missing-label element-permitted-content: suppress errors from tom-select] -->
     {%- endif %}
-    <select id='searchonly' name='owner' data-filter='(?:author|group)' class='form-control selectpicker filterHelper' data-show-subtext='true' data-live-search='true'>
-      <option data-action='clear'>{{ 'Select author'|trans }}/{{ 'group'|trans }}</option>
+    <label for='searchonly'>{{ 'And author is'|trans }}/{{ 'belongs to group:'|trans }}</label>
+    <select
+      class='form-control filterHelper'
+      data-filter='(?:author|group)'
+      id='searchonly'
+      name='searchonly'
+    >
+      <option value=''>{{ 'Select author'|trans }}/{{ 'group'|trans }}</option>
       <optgroup label='{{ 'Users'|trans }}'>
         {% for user in usersArr %}
-          <option value='author:{{ user.fullname|e('html_attr') }}' {{- Request.query.get('owner') == 'author:' ~ user.fullname ? ' selected' }}>[{{ 'author'|trans }}] {{ user.fullname }}</option>
+          <option value='author:{{ user.fullname|e('html_attr') }}' {{- Request.query.get('searchonly') == 'author:' ~ user.fullname ? ' selected' }}>[{{ 'author'|trans }}] {{ user.fullname }}</option>
         {% endfor %}
       </optgroup>
       <optgroup label='{{ 'Groups'|trans }}'>
         {% for group in teamGroups %}
-          <option value='group:{{ group }}' {{- Request.query.get('owner') == 'group:' ~ group ? ' selected' }}>[{{ 'group'|trans }}] {{ group }}</option>
+          <option value='group:{{ group }}' {{- Request.query.get('searchonly') == 'group:' ~ group ? ' selected' }}>[{{ 'group'|trans }}] {{ group }}</option>
         {% endfor %}
       </optgroup>
     </select>
@@ -207,19 +212,16 @@
     <span class='d-inline-block mb-2'>{{ 'And extra field is'|trans }}</span>
     <div class='input-group flex-nowrap'>
       {% if App.Config.configArr.debug -%}
-        <!-- [html-validate-disable-block element-permitted-content: suppress error from select picker: div child of button] -->
+        <!-- [html-validate-disable-block input-missing-label prefer-native-element: suppress errors from tom-select] -->
       {%- endif %}
       <select
         aria-label='{{ 'Name of field'|trans }}'
-        class='form-control filterHelper selectpicker'
+        class='form-control filterHelper'
         data-filter='extrafield'
-        data-live-search='true'
-        data-style=''
-        data-style-base='form-control filterHelper'
         id='metakey'
         name='metakey'
-        title='{{ 'Name of field'|trans }}'
       >
+        <option value='' disabled>{{ 'Name of field'|trans }}</option>
         <option value='**' {{- '**' == App.Request.query.get('metakey') ? ' selected' }}>{{ 'All fields'|trans }}</option>
         {% for metakey in metakeyArrForSelect %}
           <option value='{{ metakey }}' {{- metakey == App.Request.query.get('metakey') ? ' selected' }}>{{ metakey|raw }}</option>
