--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -38,12 +38,13 @@
         <div class='input-group'>
           <input type='password' class='form-control' autocomplete='new-password' id='regen_sigPassphraseInput' minlength='{{ App.Config.configArr.min_password_length }}' />
           <div class='input-group-append'>
-            <button type='button' data-action='regenerate-sigkeys' data-dismiss='modal' class='btn btn-primary'>{{ 'Regenerate'|trans }}</button>
+            <span class='btn btn-light input-border' tabindex='-1' data-action='toggle-password' data-target='regen_sigPassphraseInput'><i class='fas fa-eye' aria-hidden='true'></i></span>
           </div>
         </div>
       </div>
       <div class='modal-footer'>
         <button type='button' class='btn btn-secondary' data-dismiss='modal'>{{ 'Cancel'|trans }}</button>
+        <button type='button' class='btn btn-primary' data-action='regenerate-sigkeys' data-dismiss='modal'>{{ 'Regenerate'|trans }}</button>
       </div>
     </div>
   </div>
