--- a/src/templates/view-edit.html
+++ b/src/templates/view-edit.html
@@ -19,7 +19,9 @@
     <ul class='list-group mt-2'>
       {% for action in entityRequestActionsArr %}
       <li class='list-group-item'>
-        <i class='fas fa-person-circle-exclamation fa-2x mr-2'></i><button type='button' class='btn btn-primary' data-action='do-requestable-action' data-target='{{ action.action }}'>{{ action.action }}</button> has been requested by {{ action.requester_firstname }}<span title='{{ action.created_at }}' class='relative-moment text-nowrap smallgray ml-2'></span></li>
+        <i class='fas fa-person-circle-exclamation fa-2x mr-2'></i>
+        {% if action.target_userid == App.Users.userData.userid %}
+        <button type='button' class='btn btn-primary' data-action='do-requestable-action' data-target='{{ action.action }}'>{{ action.action }}</button>{% else %}{{ action.action }}{% endif %} has been requested by {{ action.requester_fullname }} for {{ action.target_fullname }}<span title='{{ action.created_at }}' class='relative-moment text-nowrap smallgray ml-2'></span></li>
       {% endfor %}
     </ul>
   {% endif %}
